[tool.poetry]
name = "alchemical_queues_meta"
version = "0.1.0"
description = "Repository automation for alchemical queues."
authors = ["Thijs Miedema <mail@tmiedema.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7"
anybadge = "*"
alchemical_queues = { path = "..", develop = false, extras = ["dev"] }
SQLAlchemy = {version = "^1", extras = ["mypy"]}
black = ">=22"
pytest = ">=7"
pytest-cov = ">=4"
Sphinx = ">=5"
Mypy="*"
pylint=">=2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
